Paper Mario Items 0.6.0 -- Update notes