@@ -1,1 +1,3 @@
-Paper Mario Items 0.6.0 -- Update notes
+Paper Mario Items 0.5.2 -- Update notes
+- Fixed certain detour methods being non-static
+- Changes nothing otherwise
